--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@ div {
   width: 100px;
   height: 100px;
   border: 1px solid #333;
-  color: #333;
+  background-color: #333;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
